  - add quit button to quick menu
  - infoboxen: new setting, allow scaling of title/comment font
  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Add new Infobox “Home altitude difference” (Home AltD)
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* devices
  - Add driver for Condor 3
  - Add driver for LX Navigation Eos / Era variometers

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424
  - CRITICAL: fix reachability calculation with older compilers (OpenVario,..)
* airspace
  - add classes according the OpenAir extended format AY tag
  - coloring is done according to the AC tag, or if present and allowed, according to the AY tag
* data files
  - new topology available from mapgen (including airport runways and rivers)
  - fix loss of "home" waypoint designation in certain situations for a
    non-airport home waypoint
  - reworked sgs-233 polar
* documentation
  - clarify task speed calculation section
  - lua reference updated
* ui
  - Airspace filter list can filter by type
  - TC 30s Infobox shows now climb rate since start of thermal
  - TL Gain Infobox shows now the overall climb rate of last thermal
  - add new Infobox V Task Est (Speed task estimated)
  - Status-Task panel: "Estimated task time", "Remaining time", and "Speed
    estimated" now blank if MC>0 & can't finish task
  - Status-Task panel: "Remaining time", "Remaining distance", "Speed